@@ -45,6 +45,7 @@ alias ml4w='~/dotfiles/apps/ML4W_Welcome-x86_64.AppImage'
 alias ml4w-settings='~/dotfiles/apps/ML4W_Dotfiles_Settings-x86_64.AppImage'
 alias ml4w-sidebar='~/dotfiles/eww/ml4w-sidebar/launch.sh'
 alias ml4w-hyprland='~/dotfiles/apps/ML4W_Hyprland_Settings-x86_64.AppImage'
+alias ml4w-diagnosis='~/dotfiles/scripts/diagnosis.sh'
 
 # -----------------------------------------------------
 # Window Managers
