@@ -3,7 +3,8 @@ clear
 sleep 0.5
 figlet "Diagnosis"
 echo
-echo "This script will check if some core packages are available on your system."
+echo "This script will check that essential packages and "
+echo "execution commands are available on your system."
 echo
 
 _commandExists() {
@@ -27,10 +28,17 @@ _folderExists() {
 _commandExists "rofi"
 _commandExists "dunst"
 _commandExists "waybar"
-_commandExists "swww"
+_commandExists "hyprpaper"
+_commandExists "hyprlock"
+_commandExists "hypridle"
 _commandExists "wal"
 _commandExists "gum"
 _commandExists "wlogout"
+_commandExists "wal"
+_commandExists "swww"
+_commandExists "eww"
+_commandExists "magick"
+_commandExists "figlet"
 
 echo
 echo "Press return to close the window"
